# concourse-gitea

./: Dockerfile  README.md  pyproject.toml
concourse_gitea_pr/: check.py  common.py  defs.py  exceptions.py  in_.py  out.py
concourse_gitea_pr/tests/unit/: test_check.py
